redmine:/var/git/civet.git

Version 1.8.1
-------------
Bug fixes
 - Don't strip off relative paths when applying in_dir
 - Allow 'pattern/replace' to be combined with 'append', 'datestamp_append',
   and 'datestamp_prepend' for the <file> tag.
 - civet_cancel -r was terminating if it found a complete pipeline rather than
   continuing on to process the next pipeline directory

Features
 - switched to Markdown documentation
 - adopted Apache 2 license prior to public release

Version 1.8.0
-------------
Bug fixes
 - filespec for output files with relative paths are assumed to be in the
   default output directory, just like filespecs that only contain a filename
 - fix exception in cleanup_command_line() when sys.stdin.encoding is None
 - civet_status retries failed PbsQuery.getjob calls,  we see failures on
   Torque 4 when making large numbers of queries

Features
 - pulled core functionality out of civet_status script and put it into a
   module
 - Added more helpful error messages for XML parsing errors, previously these
   would often generate a AssertionError exception and traceback


Version 1.7.6
-------------
Bug fixes
 - Fix so relative paths in tool_search_path pipeline attribute are treated as
   relative to the XML directory, not the current working directory
 - Unknown file IDs in a pipeline tool tag's inputs="" or outputs="" attribute
   no longer causes a Traceback.  A helpful error message is printed for the
   unknown IDs and the parsing process terminates.
 - Print a more helpful error message if a <dir> tag is missing filespec,
   parameter, based_on, from_file, or pipeline_root

Features
 - Add optional "path" attribute for <pipeline> and <tool> (in tool xml file)
   tags.  These paths will be added to the PATH after loading modulefiles


Version 1.7.5
-------------
Bug fixes
 - abort_pipeline bash function writes status file first, before issuing 
   all of the qdel commands.  This is in case the qdels hang and cause 